Some basic cleanups

--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,4 @@ test:
 #
 production:
   <<: *default
-  database: paidstudies_production
-  username: paidstudies
-  password: <%= ENV['PAIDSTUDIES_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
